# ChangeLog for dev-libs/soprano
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/soprano/ChangeLog,v 1.90 2012/03/25 18:57:48 johu Exp $

  25 Mar 2012; Johannes Huber <johu@gentoo.org>
  -files/soprano-2.7.3-largefile-support.patch, -soprano-2.7.0.ebuild,
  -soprano-2.7.3.ebuild:
  Remove old.

  25 Mar 2012; Brent Baude <ranger@gentoo.org> soprano-2.7.4.ebuild:
  Marking soprano-2.7.4 ppc64 for bug 406013

*soprano-2.7.5 (13 Mar 2012)

  13 Mar 2012; Johannes Huber <johu@gentoo.org> +soprano-2.7.5.ebuild:
  Version bump.

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> soprano-2.7.4.ebuild:
  x86 stable wrt bug #406013

  07 Mar 2012; Brent Baude <ranger@gentoo.org> soprano-2.7.4.ebuild:
  Marking soprano-2.7.4 ppc for bug 406013

  27 Feb 2012; Agostino Sarubbo <ago@gentoo.org> soprano-2.7.4.ebuild:
  Stable for amd64, wrt bug #406013

*soprano-2.7.4 (12 Jan 2012)

  12 Jan 2012; Johannes Huber <johu@gentoo.org> +soprano-2.7.4.ebuild:
  Version bump.

*soprano-2.7.3 (02 Nov 2011)

  02 Nov 2011; Maciej Mrozowski <reavertm@gentoo.org>
  +files/soprano-2.7.3-largefile-support.patch, +soprano-2.7.3.ebuild:
  Version bump, also fix bug 389299 (largefile support)

  18 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Remove unused description for USE="java"

  18 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -soprano-2.4.4.ebuild,
  -soprano-2.5.3.ebuild, -soprano-2.6.0.ebuild, -soprano-2.6.51.ebuild:
  old

  18 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> soprano-2.7.0.ebuild:
  ppc/ppc64 stable wrt #382641

  17 Oct 2011; Jeroen Roovers <jer@gentoo.org> soprano-2.4.4.ebuild,
  soprano-2.5.3.ebuild, soprano-2.6.0.ebuild, soprano-2.6.51.ebuild,
  soprano-2.7.0.ebuild:
  Drop HPPA keywording (bug #382641).

  05 Oct 2011; Andreas Schuerch <nativemad@gentoo.org> soprano-2.7.0.ebuild:
  x86 stable, thanks David. Bug 382641
