@@ -1,21 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX soprano-2.4.4-make-broken-redland-fatal.cmake 626 RMD160 1e66eee8b51c408d2fdb1ee34d9b4b9aeea42379 SHA1 5bd1adc38db7547631d6ebd55a41b5fbdfe40335 SHA256 654292d68cbc6d511d7b0db0387e3f1f426484934b6a5e9355c63e7606ead051
 DIST soprano-2.7.4.tar.bz2 1953706 RMD160 9e4c192165616ca5eca3ed22b9f12554530c88cc SHA1 d16231dc021bd66eebb9d1975ba075d2169a2617 SHA256 17d6f6b10d6e30a740e1267b50ea8b3a94a41942de26ede88a0492b8d278d338
 DIST soprano-2.7.5.tar.bz2 1953685 RMD160 3e41fa855d3315f2a2c4a7c62c2c8acf99516d06 SHA1 ba7577d682d8e63fe68e10cdd08bc69184031727 SHA256 6c28e0001b4194c2ddf8bc4b787f0d514e1542dc2fadf126049f37813e893b3d
+DIST soprano-2.7.6.tar.bz2 1954245 RMD160 f267a01c28381539b095bd86cc0c7499581b0eee SHA1 d9c0c8f15bb9e0313ba3ea5f31536114b738b157 SHA256 28dd05edc21eebaa6f5f2bda773455ecc010ce68026a789549747a8e58cfd732
 EBUILD soprano-2.7.4.ebuild 2622 RMD160 f55c50e796d50bc936cc68d4a9ac438e9700f534 SHA1 0e3726c5a4859dbf969368f26d0b85b4b2d35d0b SHA256 1ddadd9fb369b04e474019e0d20ece42244d9276291f81fe5e3d98b62580ccfc
 EBUILD soprano-2.7.5.ebuild 2624 RMD160 cd10d71bfab0c18ffa1f0b31435f086047a95521 SHA1 970a9f932d845d0f2b2f1edd6e98314a5006054c SHA256 ea5ac1245740f6e9818147c406b58915bf8ab24a46be6c47e9194f149e767e27
-MISC ChangeLog 12694 RMD160 676aa46cbaafbaf867c03269111ee09bde16c197 SHA1 48ab37fd41b85941a9485ea8b66baba7d76243a8 SHA256 296ebe08bf9beafc19a4edbb920699e0f9877ff478ac9f51e3785618046965f2
+EBUILD soprano-2.7.6.ebuild 2854 RMD160 634659e0bccbfefed4503b7fb9b8b0038befba6b SHA1 2f4236037d9200568c47fab7ece06ede3aaeda16 SHA256 994e12a83228bf4a9e3fd0ff48f397b09c1cdba2246dc5d0ed316e51987f3f5a
+MISC ChangeLog 12933 RMD160 268c082242534fac64da87acccc1ff779ecc2c3d SHA1 2b6bd1b5123fc06406c5779bc05f34bffcb83c3f SHA256 76bffdfe34b5398229ccd29c90b8dd21a20fbea443a67f84ea693137eecdb19c
 MISC metadata.xml 559 RMD160 b045ab65b4cbffa13c91653aec94ae9991cc9245 SHA1 bcb25e059bba95e91facdcf2386626cf9d39a1bf SHA256 9a0ba3898e768e65e1e9ea29c799b92ac27adc25bf7b1b0c77830799e8fa1061
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPb2wZAAoJEO+t9ga+3I3apQEH/Rnkkcq+Snb30dM3WlrVNNRt
-jRVeNGRMapARBlZN1z/I4Z1w0NbflNYr7lX0rzwCvzz3BRz1/tAIqAZBsipVvN5L
-BhKNAuXZtRQKj/6bKtzTYtGEvUwFKQXGQnYkGOR2mQKC3SVWi6z7bgMwWHuYw2YR
-VznN+eJ0/x2AY2S4g3IjhANb/iMgf3hDSWDVvDzB5q6g6XW1XWZ1pU0GX4WVtbDB
-k8hLjEGDglVxJKDnjOisrrm4DIj+SrnlphaO/qiaeAsmWCiHNAvc0kl0OATEKDgI
-Rw0V3sNzmcCo6FKZYnJDK42dKEnJunZeDdrYuJNIzgCsyFjEJ6cO7XoZJFIH03I=
-=AWMe
+iQEcBAEBAgAGBQJPs6XqAAoJEMbwO6tnXQ0sB0wIAIrJBK87atWUKSeRJXrh9zt2
+gR+WLm511ItOBbpCnFjkfWXC+DB+OblqwoznkVXmiG6b4sA5WJwJQTX5H54y17jU
+yYbh8JWrJBHs2Q/krOysH/ZEzqaJruswnQNU96PGhmHziij5Q1h+XsTWfFNf5PTF
+tN4sBJcYFfl30YmF8QVAZcQdtH9qqQkI9W2kazTW3+t60xk/cksXA51IKYs52GLm
+CMgSiBQXhd3i7SyhB0D2+Jcr0IZYw0Rgg/zaebDfAz5qNLngCaKJEuclZ6QHwsXC
+2KyUkV11g++l/a4+mOF7FC3Cqhk2OSxJsLFm48ONpV3BcqTW1s9dKnlv7968H/c=
+=OBnA
 -----END PGP SIGNATURE-----
